# permutation-tests

./: .gitignore  README.md  aggregate_results.py  data_viz.ipynb  macaques-example.ipynb  main.ipynb  main_script.py  manuscript.html  manuscript.qmd  permutation_helpers.py  pyproject.toml  random_data.ipynb  random_data_X.npy  random_data_y.npy  run_cv_simulations.py  run_dask_script.sh  run_simulation.py  run_simulations.py  scratch.ipynb  simulate.py  simulation_results.pkl  submit_python.sh  wharton-colors-distinct.json
.ipynb_checkpoints/: data_viz-checkpoint.ipynb  main-checkpoint.ipynb  permutation_helpers-checkpoint.py  random_data-checkpoint.ipynb  scratch-checkpoint.ipynb
figures/: power-comparison-accuracy[square].eps
